package tt;

import processing.core.PApplet;

public class Main {

    public static void main(String[] args) {
        PApplet.main(Processing.class);
    }

}
